--- a/api/package.json
+++ b/api/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "debug": "~2.6.3",
-    "jade": "^1.11.0",
-    "mongodb": "^3.1.10",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.2",
+    "colors": "^1.3.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "debug": "~2.6.3",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.4",
+    "mongodb": "^3.1.10",
+    "mongodb-uri": "^0.9.7",
     "morgan": "^1.9.0",
     "nodemailer": "^4.3.1"
   },
