--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "bcrypt": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "colors": "^1.3.3",
     "cookie-parser": "^1.4.3",
@@ -12,10 +12,11 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.4",
-    "mongodb": "^3.1.10",
+    "mongodb": "^2.2.33",
     "mongodb-uri": "^0.9.7",
     "morgan": "^1.9.0",
-    "nodemailer": "^4.3.1"
+    "nodemailer": "^4.3.1",
+    "password-validator": "^4.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
