--- a/api/package.json
+++ b/api/package.json
@@ -1,51 +1,32 @@
 {
-  "name": "purchase-naija-api",
+  "name": "purchasenaija",
   "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "colors": "^1.3.3",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
-    "debug": "~2.6.3",
-    "express": "^4.16.2",
-    "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.4",
-    "mongodb": "^2.2.33",
-    "mongodb-uri": "^0.9.7",
-    "morgan": "^1.9.0",
-    "nodemailer": "^4.3.1",
-    "password-validator": "^4.1.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.9.0",
-    "nodemon": "^1.12.1"
-  },
-  "eslintConfig": {
-    "extends": "eslint:recommended",
-    "parserOptions": {
-      "ecmaVersion": 7,
-      "sourceType": "module"
-    },
-    "env": {
-      "node": true
-    },
-    "rules": {
-      "no-console": 0,
-      "no-unused-vars": 1
-    }
-  },
-  "author": "johnpaulchukwu43",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets env,stage-0\"",
-    "build": "babel src -s -D -d dist --presets env,stage-0",
-    "start": "node dist",
-    "prestart": "npm run -s build",
-    "test": "eslint src"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.3",
+    "cookie-parser": "^1.4.3",
+    "dateformat": "^3.0.3",
+    "ejs": "^2.6.1",
+    "ejs-mate": "^3.0.0",
+    "express": "^4.16.4",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.1.0",
+    "mongoose": "^5.4.2",
+    "morgan": "^1.9.1",
+    "multer": "^1.3.0",
+    "multer-gridfs-storage": "^3.0.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
+    "randomstring": "^1.1.5"
   }
 }
