--- a/v1/package.json
+++ b/v1/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "purchasenaija",
+  "name": "purchasenaija-site-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "API for purchase naija ecommerce site",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
